{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 48,
  "lineage": "fd92f2f3-ec8f-ae5f-2992-59c2c783762d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0515f3963c203d061",
            "arn": "arn:aws:ec2:us-east-1:559588913990:instance/i-050eddd280554884a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:eks:nodegroup-name",
                "values": [
                  "NG-tech"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-84c77926-583c-2370-4f9e-0f09bd1830d6",
            "id": "i-050eddd280554884a",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0d5a8457821f8f061",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-45-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.154",
            "public_dns": "ec2-54-162-17-65.compute-1.amazonaws.com",
            "public_ip": "54.162.17.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0c787b42df9396f8e",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "172.31.32.103",
              "172.31.35.166",
              "172.31.36.153",
              "172.31.38.79",
              "172.31.39.61"
            ],
            "security_groups": [
              "eks-cluster-sg-tech-3555990"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096152ce70558c695",
            "tags": {
              "eks:cluster-name": "tech",
              "eks:nodegroup-name": "NG-tech",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "k8s.io/cluster-autoscaler/tech": "owned",
              "kubernetes.io/cluster/tech": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebb445fd82a87fe6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559588913990:loadbalancer/app/ALB-tech/ce0e2ae7598b65f4",
            "arn_suffix": "app/ALB-tech/ce0e2ae7598b65f4",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-tech-337983724.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:559588913990:loadbalancer/app/ALB-tech/ce0e2ae7598b65f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-tech",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a67a5817a19b870"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-096152ce70558c695"
              },
              {
                "subnet_id": "subnet-0a4f3a7a1762c42a4"
              },
              {
                "subnet_id": "subnet-0d621425c9fb661fd"
              }
            ],
            "subnets": [
              "subnet-096152ce70558c695",
              "subnet-0a4f3a7a1762c42a4",
              "subnet-0d621425c9fb661fd"
            ],
            "vpc_id": "vpc-0580b49d546417e03",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559588913990:listener/app/ALB-tech/ce0e2ae7598b65f4/9124e583fd037753",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:559588913990:targetgroup/TG-tech/6cacf5682714644b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559588913990:listener/app/ALB-tech/ce0e2ae7598b65f4/9124e583fd037753",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:559588913990:loadbalancer/app/ALB-tech/ce0e2ae7598b65f4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559588913990:targetgroup/TG-tech/6cacf5682714644b",
            "arn_suffix": "targetgroup/TG-tech/6cacf5682714644b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "30000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559588913990:targetgroup/TG-tech/6cacf5682714644b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:559588913990:loadbalancer/app/ALB-tech/ce0e2ae7598b65f4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG-tech",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0580b49d546417e03"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:559588913990:targetgroup/TG-tech/6cacf5682714644b-20240418183440456500000001",
            "port": 30000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:559588913990:targetgroup/TG-tech/6cacf5682714644b",
            "target_id": "i-050eddd280554884a"
          },
          "dependencies": [
            "aws_lb_target_group.tg",
            "data.aws_instance.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559588913990:security-group/sg-02a67a5817a19b870",
            "description": "Tech Challenger",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a67a5817a19b870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG-tech",
            "name_prefix": "",
            "owner_id": "559588913990",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0580b49d546417e03"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}